[package]
name = "sapling-tools"
version = "0.1.0"
authors = ["Tadeas Kmenta <tadeas.kmenta@zel.cash>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

hex = "0.3"
bech32 = "0.6"
zcash_primitives = {  git = "https://github.com/zcash/librustzcash", rev = "c289cf9d4b46d330c265006e5f796543f2744fe5" }
zcash_client_backend = {  git = "https://github.com/zcash/librustzcash", rev = "c289cf9d4b46d330c265006e5f796543f2744fe5" }
json = "0.11.14"    

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
